@@ -8,6 +8,7 @@ noinst_HEADERS =       quartz_types.h \
 		       quartz_table_entries.h \
 		       quartz_table.h \
 		       quartz_termlist.h \
+		       quartz_lexicon.h \
 		       quartz_record.h \
 		       quartz_attributes.h \
 		       quartz_utils.h \
@@ -20,6 +21,7 @@ libquartz_la_SOURCES = quartz_database.cc \
 		       quartz_table_entries.cc \
 		       quartz_table.cc \
 		       quartz_termlist.cc \
+		       quartz_lexicon.cc \
 		       quartz_record.cc \
 		       quartz_attributes.cc \
 		       quartz_utils.cc \
